--- a/index.html
+++ b/index.html
@@ -118,8 +118,19 @@ function exportCSV(){
 }
 
 renderHistory();
+</script> 
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function () {
+    navigator.serviceWorker.register('./service-worker.js')
+      .then(function () {
+        console.log('Service Worker registrado com sucesso');
+      });
+  });
+}
 </script>
 </body>
 
 </html>
+
 
